# Cpp-Plugins-With-C-API

./: .gitignore  CMakeLists.txt  README.md
include/: APIClass.h
src/: APIClass.cpp  main.cpp
